WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243828
REGRESSION(
253277@main
): [ iOS ] fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale.html is constantly failing
https://bugs.webkit.org/show_bug.cgi?id=243828
Summary
REGRESSION(253277@main): [ iOS ] fast/text-autosizing/ios/idempotentmode/idem...
Hercules Hjalmarsson
Reported
2022-08-11 09:13:26 PDT
fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale.html Is a constant text failure on iOS ToT and since
253277@main
HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Ftext-autosizing%2Fios%2Fidempotentmode%2Fidempotent-autosizing-after-changing-initial-scale.html
DIFF: --- /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-WK2-Tests/build/layout-test-results/fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale-expected.txt +++ /Volumes/Data/worker/Apple-iOS-15-Simulator-Debug-WK2-Tests/build/layout-test-results/fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale-actual.txt @@ -8,17 +8,17 @@ After changing initial scale to 0.5 none auto -8px 13px -12px 17px -14px 19px -16px 19px +8px 8px +12px 12px +14px 14px +16px 16px 20px 20px After changing initial scale to 0.75 none auto -8px 10px -12px 14px -14px 16px +8px 8px +12px 12px +14px 14px 16px 16px 20px 20px DIFF URL:
https://build.webkit.org/results/Apple-iOS-15-Simulator-Debug-WK2-Tests/253280@main%20(3371)/fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-11 09:13:49 PDT
<
rdar://problem/98512091
>
Hercules Hjalmarsson
Comment 2
2022-08-11 09:16:04 PDT
I was able to bisect this issue to
253277@main
running command: run-webkit-tests --ios-simulator fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale.html
EWS
Comment 3
2022-08-11 09:39:09 PDT
Test gardening commit
253336@main
(e2c82db70f58): <
https://commits.webkit.org/253336@main
> Reviewed commits have been landed. Closing PR #3224 and removing active labels.
Devin Rousso
Comment 4
2022-08-11 12:18:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3233
EWS
Comment 5
2022-08-12 01:09:21 PDT
Committed
253371@main
(debb098c0323): <
https://commits.webkit.org/253371@main
> Reviewed commits have been landed. Closing PR #3233 and removing active labels.
EWS
Comment 6
2022-09-19 08:57:12 PDT
Test gardening commit
254630@main
(86dc0288c922): <
https://commits.webkit.org/254630@main
> Reviewed commits have been landed. Closing PR #4486 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug