REGRESSION(253277@main): [ iOS ] fast/text-autosizing/ios/idempotentmode/idempotent-autosizing-after-changing-initial-scale.html is a constant failure https://bugs.webkit.org/show_bug.cgi?id=243828 <rdar://problem/98512091>

Reviewed by Tim Horton.

* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::clearSizeOverrideForCSSDefaultViewportUnits):
(WebCore::FrameView::setOverrideSizeForCSSDefaultViewportUnits):
Partially revert 253277@main to use `didChangeStyleSheetEnvironment` whenever the underlying value
of the CSS default viewport unit changes, as this only happens when the size of the view changes,
which is really a change in the environment (as opposed to CSS small/large/dynamic viewport units
only changing when other UI near the view changes, but not the view itself). This also matches the
behavior before any of the new CSS viewport units were implemented (243349@main).

Canonical link: https://commits.webkit.org/253371@main